# max31855-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs
src/data/: error.rs  mod.rs
src/driver/: error.rs  hal_async.rs  hal_blocking.rs  mod.rs
src/linearization/: error.rs  k_type_constants.rs  mod.rs
